<resources>
    <string name="Heading_putuayu1">Bahan-bahan</string>
    <string name="Heading_kuelapis1">Bahan-bahan</string>
    <string name="Heading_bolukukus1">Bahan-bahan</string>
    <string name="Heading_cakwe1">Bahan-bahan</string>
    <string name="Heading_ondeonde1">Bahan-bahan</string>
    <string name="Heading_kuelemet1">Bahan-bahan</string>
    <string name="Heading_kuemolen1">Bahan-bahan</string>
    <string name="Heading_bakpao1">Bahan-bahan</string>
    <string name="Heading_kuepukis1">Bahan-bahan</string>
    <string name="Heading_putuayu2">Cara Pembuatan</string>
    <string name="Heading_kuelapis2">Cara Pembuatan</string>
    <string name="Heading_bolukukus2">Cara Pembuatan</string>
    <string name="Heading_cakwe2">Cara Pembuatan</string>
    <string name="Heading_ondeonde2">Cara Pembuatan</string>
    <string name="Heading_kuelemet2">Cara Pembuatan</string>
    <string name="Heading_kuemolen2">Cara Pembuatan</string>
    <string name="Heading_bakpao2">Cara Pembuatan</string>
    <string name="Heading_kuepukis2">Cara Pembuatan</string>
    <string name="article_text_putuayu">
        <br>1. Tepung terigu protein rendah atau sedang\n
            2. Tepung Maizena\n
            3. Gula Pasir\n
            4. Telur\n
            5. SP\n
            6. Panili\n
            7. Garam\n
            8. Santan instan\n
            9. Pasta pandan\n
            10. Minyak goreng (untuk olesan secukupnya)\n
            11. Daun pandan\n
            12. Air\n
            TOPPING :
            1. Kelapa parut\n
            2. Tepung maizena\n
            3. Garam
        </br>
    </string>
    <string name="article_textputuayu2">
        <br>1. Siapkan panci kukusan/dandang dan panaskan di atas kompor. Sisihkan.\n
            2. Siapkan cetakan putu ayu. Oles tipis-tipis dengan minyak. Sisihkan.\n
            3. Dalam wadah, campur rata semua bahan topping. Ambil 1 sdt adonan topping lalu taruh dan ratakan di dasar cetakan. Tekan-tekan hingga padat. Lakukan hingga semua adonan topping habis. Sisihkan.\n
            4. Dalam wadah, campur rata santan, pasta pandan, dan sari pandan. Sisihkan.\n
            5. Dalam wadah, kocok gula pasir, telur, SP, vanili, dan garam hingga mengembang kaku.\n
            6. Masukkan tepung terigu berganti-gantian dengan larutan santan dan pandan. Aduk balik dengan spatula hingga rata. \n
            7. Masukkan adonan ke dalam plastik segitiga. Gunting ujungnya lalu semprotkan ke dalam cetakan kue putu ayu (di atas parutan kelapa) hingga penuh. Lakukan hingga habis dan semua cetakan terisi. \n
            8. Kukus putu ayu selama 20 menit hingga matang. Angkat dan keluarkan dari cetakan. \n
            9. Siap disajikan.
        </br>
    </string>
    <string name="article_text_kuelapis">
        <br>1. Tepung beras\n
            2. Gula pasir\n
            3. Tepung Kanji\n
            4. Air santan dari\n
            5. Pewarna makanan hijau \n
            6. Daun pandan diikat simpul\n
            7. Garam\n
            8. Vanili bubuk\n
            9. Minyak goreng (untuk olesan secukupnya)\n
        </br>
    </string>
    <string name="article_textkuelapis2">
        <br>1. Rebus air santan dengan garam dan daun pandan sampai mendidih. lalu angkat dan dinginkan air santan. sisihkan.\n
            2. Campurkan tepung beras, tepung kanji, gula pasir, dan vanili bubuk dalam wadah besar. aduk semua bahan sampai tercampur.\n
            3. Kemudian tuang air santan yang sudah dingin ke dalam adonan sedikit-demi sedikit sambil terus diaduk. aduk adonan sampai licin dan merata.\n
            4. Kemudian bagi adonan menjadi 2 dalam 2 wadah yang berbeda. 1 adonan diberi pewarna makanan hijau secukupnya dan aduk rata.\n
            5. Sedangkan adonan yang satunya biarkan berwarna putih. sisihkan adonan.\n
            6. Panaskan dandang atau pengukus sampai airnya mendidih. \n
            7. Siapkan loyang untuk cetakan kue lapis. olesi loyang dengan minyak dan alasi dengan plastik biar tidak lengket. \n
            8. Lalu masukkan dan panaskan loyang dalam pengukus. \n
            9. Setelah loyang panas, tuang adonan putih secukupnya ke dalam loyang untuk lapisan pertama. lalu kukus adonan dan tutup dengan serbet bersih selama 5 menit sampai tekturnya mengeras.\n
            10.Setelah 5 menit, tuang adonan yang berwarna hijau diatasnya. kukus lagi selama 5 menit sampai mengeras. lalukan proses ini secara berulang sampai adonan habis dengan warna berseling putih-hijau agar terlihat lapisan nya saat diiris.\n
            11.Setelah semua bahan habis, kukus kembali adonan selama kurang lebih 10 menit agar kue lapis benar-benar matang sempurna.\n
            12.Setelah matang, angkat loyang dari dalam kukusan. diamkan beberapa saat sampai dingin.\n
            13.Setelah dingin, angkat kue lapis dari dlam loyang dan potong-potong sesuai selera.\n
            14.Kue lapis siap disajikan\n
        </br>
    </string>
    <string name="article_text_bolukukus">
        <br>1. Terigu protein sedang\n
            2. Gula pasir\n
            3. Air soda\n
            4. Telur\n
            5. Cake emulfisier\n
        </br>
    </string>
    <string name="article_textbolukukus2">
        <br>1. Siapkan wadah bersih, tuang semua bahan ke dalam wadah.\n
            2. Kocok dengan hand mixer hingga kental.\n
            3. Ambil sebagian adonan, beri warna sesuai selera.\n
            4. Tuang adonan putih dan adonan warna ke dalam cetakan bolu kukus yang sudah dialasi dengan kertas tanpa dioles margarin.\n
            5. Kukus dalam panci pengukus yang sudah beruap banyak selama 20 menit. Angkat dan keluarkan dari cetakan.  Sajikan bolu kukus jadul untuk hidangan di akhir pekan.\n
        </br>
    </string>
    <string name="article_text_cakwe">
        <br>1. Terigu protein tinggi\n
            2. Gula pasir\n
            3. Baking powder\n
            4. Ragi instan\n
            5. Minyak goreng\n
        </br>
    </string>
    <string name="article_textcakwe2">
        <br>1. Masukan dalam satu wadah tepung terigu, gula dan baking powder. Beri air putih sedikit demi sedikit sambil diulenu. Setelah setengah kalis, tambahkan minyak goreng 1 sendok makan dan garam.\n
            2. Uleni kembali hingga kalia, lallu bulatkan dan diamkan sambil ditutup serbet selama 1 jam atau hingga adonan mengembang 2 kali lipat.\n
            3. Setelah mengembang, kempeskan adonan lalu uleni sebentar. Gilas adonan, lalu potong sama panjang dan sama lebar. Bentuk adonan dengan sumpit agar adonan memiliki garis.\n
            4. Panaskan minyak dengan api kecil. Setelah panas, masukan adonan cakwe dan goreng hingga kedua sisi berubah warna menjadi coklat keemasan. Lalu angkat dan tiriskan. Ulangi menggoreng hingga adonan mentah habis.\n
            5. Letakan pada piring saji dan beri saos sambal untuk cocolannya supaya lebih nikmat.\n
        </br>
    </string>
    <string name="article_text_ondeonde">
        <br>Bahan Isi\n
            1. Kacang hijau kupas (direndam selama 1jam)\n
            2. Gula pasir\n
            3. Daun pandan diikat simpul\n
            4. Garam\n
            5. Santan kelapa\n
            Bahan Kulit\n
            1. Tepung ketan putih\n
            2. Garam\n
            3. Kentang kukus dihaluskan\n
            4. Gula pasir halus\n
            5. Air hangat\n
            6. Wijen untuk pelapis\n
            7. Minyak untuk menggoreng
        </br>
    </string>
    <string name="article_textondeonde2">
        <br>1. Isi :kukus kacang hijau kupas selama 25 menit. Angkat, lalu blender halus bersama santan.\n
            2. Di dalam panci, masak kacang hijau yg sudah di haluskan bersama sisa santan, gula pasir, garam dan daun pandan. Aduk sampai kalis, biarkan dingin bentuk bulat, supaya rapi bisa di timbang. Masing-masing 15 gr sisihkan.\n
            3. Kulit : Campur tepung ketan putih, kentang kukus, gula pasir halus dan garam aduk rata.\n
            4. Tuang air hangat sedikit-sedikit sampai kalis dan licin.\n
            5. Timbang masing-masing 25 gr, pipihkan, beri isi bentuk bulat, lakukan sampai adonan habis.\n

        </br>
    </string>
    <string name="article_text_kuelemet">
        <br>1. Singkong\n
            2. Kelapa sedang,parut\n
            3. Gula aren,sisir halus\n
            4. Gula pasir\n
            5. Garam\n
            6. Daun pandan, potong-potong\n
            7. Daun pisang
        </br>
    </string>
    <string name="article_textkuelemet2">
        <br>1. Kupas singkong, cuci bersih lalu parut halus. Peras sedikit airnya.\n
            2. Taruh singkong parut dalam wadah bersih. Tambahkan kelapa oarut, aduk rata.\n
            3. Masukkan gula aren, gula pasir dan garam. Aduk-aduk hingga gula tercampur rata dengan singkong.\n
            4. Ambil selembar daun pisang, taruh sepotong daun pandan, tambahkan 2 sdm adonan singkong di atasnya.\n
            5. Gulung seperti kue pisang tetapi sedikit panjang. Semat kedua ujungnya dengan lidi sehingga bentuknya seperti pepes.\n
            6. Kukus dalam kukusan panas selama 30 menit.\n
            7. Angkat dan dinginkan.
        </br>
    </string>
    <string name="article_text_kuemolen">
        <br>1. Tepung terigu\n
            2. Tepung maizena\n
            3. Gula halus\n
            4. Mentega cair\n
            5. Air\n
            6. Garam\n
            7. Vanila bubuk cair\n
            8. Pisang
        </br>
    </string>
    <string name="article_textkuemolen2">
        <br>1. Kupas pisang Iris2 menyerong sisihkan.\n
            2. Campur semua bahan kulit ulenin sebentar lalu istirahatkan di kulkas selama 1 jam.\n
            3. Ambil adonan dan bagi menjadi 10 bagian bulat2 kan dan lonjongkan kemudian di gilas tipis lalu kasi pisang gulung dg rapi.\n
            4. Panaskan minyak dan goreng molen sampai kuning keemasan setelah matang angkat dan sajikan.\n
        </br>
    </string>
    <string name="article_text_bakpao">
        <br>Bahan Biang\n
            1. Susu bubuk putih\n
            2. Gula pasir\n
            3. Ragi kering\n
            4. Air hangat\n
            Bahan Adonan\n
            1. Tepung terigu\n
            2. Baking powder\n
            3. Garam halus\n
            4. Margarin\n
            Bahan Isi
            1. dark cooking chocolate, potong dadu
        </br>
    </string>
    <string name="article_textbakpao2">
        <br>1. Campur semua bahan biang. Aduk rata. Diamkan selama 5 menit hingga berbuih.\n
            2. Dalam wadah, campur semua bahan adonan. Remas-remas sebentar, tuang bahan biang sedikit demi sedikit. Aduk selama sekitar 2 menit. Tutup dengan kain bersih. Diamkan selama 20 menit.\n
            3. Setelah adonan mengembang, taburi tangan dengan tepung terigu. Bagi adonan masing-masing 50 gram. Bentuk bulat-bulat. Beri isian cokelat. Tata adonan di atas paper cup. Diamkan selama 20 menit.\n
            4. Panaskan kukusan.\n
            5. Kukus bakpao selama sekitar 20 menit. Angkat dan sajikan.\n
        </br>
    </string>
    <string name="article_text_kuepukis">
        <br>1. Tepung terigu\n
            2. Gula pasir\n
            3. Telur utuh\n
            4. Fermipan\n
            5. Santan kara\n
            6. Mentega\n
            7. ceres secukupnya
        </br>
    </string>
    <string name="article_textkuepukis2">
        <br>1. Campur tepung, gula pasir, garam, dan fermipan aduk rata.\n
            2. Di wadah lain campur telur dan santan aduk rata dengan wisk.\n
            3. Tuang santan ke dalam bahan tepung. Aduk hingga tercampur rata, kemudian tutup dengan kain bersih. Diamkan selama 30 menit.\n
            4. Oles cetakan dengan minyak goreng. Panaskan cetakan dengan api sedang.\n
            5. Tuangkan adonan ke dalam cetakan. Tuangkan sebanyak ¾ dari cetakan.\n
            6. Setengah matang, beri topping meses cokelat dan tutup kembali.\n
            7. Jika sudah matang, angkat dan sajikan.\n
        </br>
    </string>
</resources>