<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResepBakpao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bakpao"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:src="@drawable/bakpao"/>

        <TextView
            android:id="@+id/tv_bakpao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_bakpao1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_bakpao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_text_bakpao"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_bakpao3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_bakpao2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_bakpao4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_textbakpao2"
            android:textSize="20dp" />


    </LinearLayout>

</ScrollView>