<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResepPutuAyu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/putuayu"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:src="@drawable/putu_ayu"/>

        <TextView
            android:id="@+id/tv_putuayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_putuayu1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_putuayu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_text_putuayu"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_putuayu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_putuayu2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_putuayu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_textputuayu2"
            android:textSize="20dp" />


    </LinearLayout>

</ScrollView>