<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResepKueLemet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/kuelemet"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:src="@drawable/kue_lemet"/>

        <TextView
            android:id="@+id/tv_kuelemet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_kuelemet1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_kuelemet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_text_kuelemet"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_kuelemet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/Heading_kuelemet2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tv_kuelemet4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/article_textkuelemet2"
            android:textSize="20dp" />


    </LinearLayout>

</ScrollView>